--- a/app/sass/_bak.scss
+++ b/app/sass/_bak.scss
@@ -61,20 +61,21 @@ nav {
         width: 25px;
         height: 20px;
         background: url("../img/spritesheet.png") no-repeat;
-        background-position: 0 0;
+        background-position: -0px -0px;
+        background-size: 100%;        
     }
 
     &:nth-child(2):after {
         background-image: url("../img/spritesheet.png");
-        background-position: -25px 0;
+        background-position: -50px -0px;
     }
     &:nth-child(3):after {
         background-image: url("../img/spritesheet.png");
-        background-position: 0 -20px;
+        background-position: -0px -40px;
     }
     &:nth-child(4):after {
         background-image: url("../img/spritesheet.png");
-        background-position: -25px -20px;
+        background-position: -50px -40px;
     }
 
     &.active {
@@ -82,19 +83,19 @@ nav {
         background-color: #af936c;
         &:after {
             background-image: url("../img/spritesheet.png");
-            background-position: -50px 0;
+            background-position: -100px -0px;
         }
         &:nth-child(2):after {
             background-image: url("../img/spritesheet.png");
-            background-position: -50px -20px;
+            background-position: -100px -40px;
         }
         &:nth-child(3):after {
             background-image: url("../img/spritesheet.png");
-            background-position: 0 -40px;
+            background-position: -0px -80px;
         }
         &:nth-child(4):after {
             background-image: url("../img/spritesheet.png");
-            background-position: -25px -40px;
+            background-position: -50px -80px;
         }
     }
 }
@@ -132,7 +133,8 @@ nav {
             width: 16px;
             height: 16px;
             background: url("../img/spritesheet.png") no-repeat;
-            background-position: -50px -40px;
+            background-position: -100px -80px;
+            background-size: 100%;
         }
         
         &:after {
@@ -157,7 +159,7 @@ nav {
             
             &:before {
                 background-image: url("../img/spritesheet.png");
-                background-position: -75px 0;
+                background-position: -121px -80px;
             }
             &:after {
                 display: none;
