--- a/app/sass/_base.scss
+++ b/app/sass/_base.scss
@@ -3,5 +3,6 @@
 @import  'core/mixins', 'core/functions', 'core/vars';
 
 body {
-	background-color: #fbf9fe;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	// background-color: #fbf9fe;
 }
